<resources>
    <string name="app_name" translatable="false">Marketplace Desa</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="setting">Setting</string>
    <string name="no_data">No Data</string>
    <string name="image_store_description" translatable="false">Image Store</string>
    <string name="image_product_description" translatable="false">Image Product</string>
    <string name="background_gradient_description" translatable="false">Background Gradient</string>
    <string name="background_solid_description" translatable="false">Background Solid</string>
    <string name="search">Search</string>
    <string name="product_title">Product Title</string>
    <string name="stock_title">Stock : </string>
    <string name="number_of_stock" translatable="false">-</string>
    <string name="price_title">Price : Rp.</string>
    <string name="number_of_price" translatable="false">-</string>
    <string name="search_product_query_hint">Search product here…</string>
    <string name="search_store_query_hint">Search store here…</string>
    <string name="title_activity_settings">Settings</string>
    <string name="seller">Seller</string>
    <string name="not_a_seller">Not a seller</string>
    <string name="user_name">Your Name</string>
    <string name="seller_status_title">Seller Status : </string>
    <string name="dummy_address">User Address, St. 8888. Ngabul. Tahunan. Jepara. Jawa Tengah. Indonesia</string>
    <string name="become_a_seller">Become a seller</string>
    <string name="phone_number" translatable="false">+6289647990167</string>
    <string name="edit_profile">edit profile</string>
    <string name="sign_out">sign out</string>
    <string name="language_setting">Language Setting</string>
    <string name="choose_language_menu">Choose Language</string>
    <string name="edit_info_store">Edit Store Information</string>
    <string name="details_store">Details Store</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="order_count" translatable="false">0</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="caution_phone_number_cannot_edit">telephone number cannot be changed</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="key_maps" translatable="false">AIzaSyDvGo9RhZmRTPVZqXgqVRLSephFcyVhI8U</string>
    <string name="my_order">My Order</string>
    <string name="order_list">Order List</string>
    <string name="total_price_title">Total Price : Rp.</string>
    <string name="order_quantity_title">Order Quantity</string>
    <string name="order_number">Order Number</string>
    <string name="dummy_user_order_number" translatable="false">-</string>
    <string name="user_order">Order by</string>
    <string name="dummy_name_user_order" translatable="false">-</string>
    <string name="choose_a_shipping_method">Choose a Shipping Method</string>
    <string name="take_it_by_yourself">Take it by yourself</string>
    <string name="delivered_to_home">Delivered to home</string>
    <string name="payment_details">Payment Details</string>
    <string name="estimated_total_price">Estimated total price</string>
    <string name="total">Total</string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="no_changes_to_orders">no changes to orders?</string>
    <string name="id_default_country" translatable="false">id</string>
    <string name="name_field_error">Name cannot be empty</string>
    <string name="address_field_error">Address cannot be empty</string>
    <string name="permission_checked" translatable="false">Permission Checked</string>
    <string name="take_or_choose">Take Photo or Choose from Gallery</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_from_camera">Take from Camera</string>
    <string name="upload_data_title">Upload data…</string>
    <string name="message_check_your_data">make sure the data you entered is correct</string>
    <string name="title_check_your_data">Check your data</string>
    <string name="your_store_page">Your Store Page</string>
    <string name="sign_in_cancel_alert">Sign in cancel</string>
    <string name="check_internet_connection_alert">Check your internet connection</string>
    <string name="photo_profile_alert">Photo Profile Can Not Empty!!</string>
    <string name="attention">Attention!!</string>
    <string name="seller_phone_number">Store phone numbers may be different from the user\'s phone number.</string>
    <string name="choose_store_image">Choose Store Image</string>
    <string name="select_store_location">Select Store Location</string>
    <string name="complete_store_information">Complete Store Information</string>
    <string name="phone_field_error">Phone number cannot be empty</string>
    <string name="select_store_location_alert">Select your store location on map</string>
    <string name="title_select_store_location_alert">Location store not selected</string>
    <string name="store_location">Store Location</string>
    <string name="order_number_key" translatable="false">orderNumber</string>
    <string name="badge_shared_preferences_value_key" translatable="false">badgeSharedPreferencesValue</string>
    <string name="order_shared_preferences_name" translatable="false">order_shared_preferences</string>
    <string name="user_store_order_shared_preferences_name" translatable="false">user_store_order_shared_preferences</string>
    <string name="user_store_order_value_key" translatable="false">user_store_order_value_key</string>
    <string name="alert_message_order">You have an order that hasn\'t been completed in another store. Please complete the order or cancel.</string>
    <string name="order_number_value_key" translatable="false">order_number_value_key</string>
    <string name="user_name_value_key" translatable="false">user_name_value_key</string>
    <string name="available_stock_status">available</string>
    <string name="not_available_stock_status">not available</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="you_want_to_cancel_the_order">You want to cancel the order and delete the order ?</string>
    <string name="firebase_shared_preferences" translatable="false">firebase_shared_preferences</string>
    <string name="short_lived_task_is_done" translatable="false">Short lived task is done.</string>
    <string name="default_notification_channel_id" translatable="false">6969</string>
    <string name="notification_channel" translatable="false">Marketplace Desa Notification</string>
    <string name="you_have_a_new_order">You Have a New Order</string>
    <string name="you_have_a_new_order_with_order_number">You have a new order with order number</string>
    <string name="from">from</string>
    <string name="order_history">Order History</string>
    <string name="order_received">Order Received</string>
    <string name="add_new_product">Add New Product</string>
    <string name="edit_product_information">Edit Product Information</string>
    <string name="photo_product_alert">Photo Product Can Not Empty!!</string>
    <string name="delete">Delete</string>
    <string name="message_delete_product">Are you sure want to delete this product ?</string>
    <string name="title_delete_product">Delete this product ?</string>
    <string name="edit_store_information">Edit Store Information</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No Notification</string>
    <string name="notification_alert">You have new notification</string>
    <string name="order_list_title">"Your order with the order number : "</string>
    <string name="my_order_history">My Order History</string>
    <string name="order_status">Order Status</string>
    <string name="waiting_status">Waiting</string>
    <string name="process_status">Order is being processed</string>
    <string name="order_accept_status">Order accepted by seller</string>
    <string name="order_complete_status">Order Complete</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="order_cancel_status">Order Canceled by seller</string>
    <string name="payment_status">Payment Status</string>
    <string name="paid_off_status">Paid off</string>
    <string name="not_yet_paid_off_status">Not yet paid off</string>
    <string name="store">Store</string>
    <string name="finish_order">Order completed / paid</string>
    <string name="order_progress_status">Order Progress Status</string>
    <string name="update_order_status_success">Update order status success</string>
    <string name="update_status">Update Status</string>
    <string name="your_order_status_title">Your order status:</string>
    <string name="update_order_status">Update Order Status</string>
</resources>
