<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_user"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_my_order"
        android:icon="@drawable/ic_view_list"
        android:title="@string/my_order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="never" />
</menu>