<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_product_order_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_product_order"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_product_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart"
        tools:srcCompat="@drawable/ic_shopping_cart" />

    <TextView
        android:id="@+id/tv_product_title_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:text="@string/product_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product_order"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/sample_product.json/products/id/name" />

    <TextView
        android:id="@+id/tv_stock_title_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginBottom="8dp"
        android:text="@string/stock_title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product_order"
        tools:text="@string/stock_title" />

    <TextView
        android:id="@+id/tv_number_of_stock_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:text="@string/number_of_stock"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_title_order"
        app:layout_constraintStart_toEndOf="@+id/tv_stock_title_order"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_title_order"
        tools:text="@sample/sample_product.json/products/id/stock" />

    <TextView
        android:id="@+id/tv_price_title_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price_title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_stock_title_order"
        app:layout_constraintStart_toEndOf="@+id/img_product_order"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_title_order"
        tools:text="@string/price_title" />

    <TextView
        android:id="@+id/tv_number_of_price_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="16dp"

        android:text="@string/number_of_price"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price_title_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_price_title_order"
        app:layout_constraintTop_toTopOf="@+id/tv_price_title_order"
        tools:text="@sample/sample_product.json/products/id/price" />

    <Button
        android:id="@+id/btn_plus_sign_order"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:text="@string/plus_sign"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_title_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_title_order"
        tools:text="@string/plus_sign"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tv_order_count_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/order_count"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_plus_sign_order"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus_sign_order"
        app:layout_constraintTop_toTopOf="@+id/btn_plus_sign_order"
        tools:text="@string/order_count"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_minus_sign_order"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/minus_sign"
        android:textColor="@android:color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_title_order"
        app:layout_constraintEnd_toStartOf="@+id/tv_order_count_order"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_number_of_stock_order"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_title_order"
        tools:text="@string/minus_sign"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_add_to_shopping_basket_order"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_title_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_number_of_stock_order"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_title_order"
        tools:text="@string/add" />
</androidx.constraintlayout.widget.ConstraintLayout>