<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/img_product"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_product_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart"
        tools:srcCompat="@drawable/ic_shopping_cart" />

    <TextView
        android:id="@+id/tv_product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/product_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@sample/sample_product.json/products/id/name" />

    <TextView
        android:id="@+id/tv_stock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/stock_title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        tools:text="@string/stock_title" />

    <TextView
        android:id="@+id/tv_number_of_stock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/number_of_stock"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stock_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_stock_title"
        app:layout_constraintTop_toTopOf="@+id/tv_stock_title"
        tools:text="@sample/sample_product.json/products/id/stock" />

    <TextView
        android:id="@+id/tv_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price_title"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_stock_title"
        app:layout_constraintStart_toEndOf="@+id/img_product"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_title"
        tools:text="@string/price_title" />

    <TextView
        android:id="@+id/tv_number_of_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/number_of_price"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_price_title"
        app:layout_constraintTop_toTopOf="@+id/tv_price_title"
        tools:text="@sample/sample_product.json/products/id/price" />
</androidx.constraintlayout.widget.ConstraintLayout>